@@ -1,6 +1,7 @@
 2023-08-06 Francois Suter (Idéative)  <typo3@ideative.ch>
 
     * Hint at the possibility of combining additional fields and substructure fields for transformations, resolves #292
+    * Allow for wildcard without condition in arrayPath property, resolves #291
 
 2023-07-10 Francois Suter (Idéative)  <typo3@ideative.ch>
 
